# libcoapcpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  library.json  test_run.sh
api/: blockwise.h  connection.h  consts.h  core_link.h  dns_resolver.h  endpoint.h  error.h  packet.h  senml_json.h  socket.h  uri.h  utils.h
examples/: examples.code-workspace
examples/ESP32/: build.sh  flash.sh
examples/ESP32/coap-client/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
examples/ESP32/coap-client/components/libcoapcpp/: CMakeLists.txt
examples/ESP32/coap-client/main/: CMakeLists.txt  coap-client.cc
examples/NUCLEO-F429ZI/: README.md  build.sh  flash.sh  monitor.sh
examples/NUCLEO-F429ZI/common/: FreeRTOSConfig.h  lwipopts.h  stm32f4xx_hal_conf.h
examples/NUCLEO-F429ZI/script/: bsp.make  cjson.make  coapcpp.make  config.make  freertos.make  hal.make  lwip.make
examples/NUCLEO-F429ZI/udp-server/: Makefile  README.md  config.make
examples/NUCLEO-F429ZI/udp-server/Core/Inc/: command.hh  commands.h  log.h  main.h  rtc.h  udp_server.hh
examples/NUCLEO-F429ZI/udp-server/Core/Src/: command.cc  commands.c  log.c  main.cc  rtc.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  udp_server.cc  udp_server_backup.c
examples/NUCLEO-F429ZI/udp-server/LwIP/App/: lwip.c  lwip.h
examples/POSIX/: CMakeLists.txt  README.md  build.sh
examples/POSIX/coap-client/: CMakeLists.txt  coap-client.cc  main.cc
examples/POSIX/coap-server/: CMakeLists.txt  coap-server.cc  coap_server.cc  coap_server.h  main.cc  trace.h
examples/POSIX/coap-server/data/: well-known_core.wlnk
examples/POSIX/common/: coap_client.cc  coap_client.h  coap_server.cc  coap_server.h  connection.cc  dtls_client.cc  dtls_client.h  dtls_server.cc  dtls_server.h  endpoint.cc  endpoint.h  http_requests.cc  http_requests.h  my_certificates.cc  my_certificates.h  packet_helper.cc  packet_helper.h  safe_queue.h  sensor.cc  sensor.h  sensor_stubs.cc  sensor_stubs.h  tcp_client.h  trace.h  udp_client.cc  udp_client.h  udp_server.cc  udp_server.h  wolfssl_error.cc
examples/POSIX/dtls-echo-server/: CMakeLists.txt  dtls-echo-server.cc
examples/POSIX/tcp-client/: CMakeLists.txt  tcp-client.cc
examples/POSIX/tls-client/: CMakeLists.txt  tls-client.cc  wolfssl_error.h
examples/POSIX/tls-client/certs/: cxemotexnika-org-chain.pem  cxemotexnika-org.pem
examples/POSIX/tls-client1/: CMakeLists.txt  tls-client1.cc
examples/POSIX/tls-client2/: CMakeLists.txt  mbedtls_error.cc  mbedtls_error.h  tls-client2.cc
examples/POSIX/udp-client/: CMakeLists.txt  udp-client.cc
examples/POSIX/udp-echo-client/: CMakeLists.txt  udp-echo-client.cc
examples/POSIX/udp-echo-server/: CMakeLists.txt  udp-echo-server.cc
examples/RASPBERRY-PI/: CMakeLists.txt  README.md  build.sh  flash.sh  install.sh  monitor.sh
examples/RASPBERRY-PI-4/: CMakeLists.txt  README.md
examples/RASPBERRY-PI-4/coap-server/: CMakeLists.txt  main.cc
examples/RASPBERRY-PI-4/coap-server/data/: well-known_core.wlnk
examples/RASPBERRY-PI-4/common/: DHT11.cc  DHT11.h  RGB_LED.cc  RGB_LED.h  sensor_error.cc  sensor_error.h  timestamp.h
examples/RASPBERRY-PI/udp-server/RPi-400/: CMakeLists.txt
examples/RASPBERRY-PI/udp-server/RPi-400/inc/: command.h  log.h  pico_protocol.h  spi.h  udp_server.h
examples/RASPBERRY-PI/udp-server/RPi-400/src/: command.cc  main.cc  pico_protocol.cc  spi.cc  udp_server.cc
examples/RASPBERRY-PI/udp-server/RPi-Pico/: CMakeLists.txt
examples/RASPBERRY-PI/udp-server/RPi-Pico/inc/: ADXL345.h  error.h  pico_protocol.h
examples/RASPBERRY-PI/udp-server/RPi-Pico/src/: ADXL345.cc  error.cc  main.cc  pico_protocol.cc
examples/STM32/: build.sh
examples/STM32/coap-client/: coap-client.cc
examples/STM32MP157A-DK1/: CMakeLists.txt  README.md
examples/STM32MP157A-DK1/coap-server/Cortex-A7/: CMakeLists.txt  coap_server.cc  coap_server.h
examples/coap-server/: platformio.ini
examples/coap-server/include/: lwipopts.h  trace.h
examples/coap-server/src/: main.cpp
include/: buffer.h  consts.h  error.h  senml_json.h
script/docker/: build.sh  dockerfile.debian  dockerfile.fedora  dockerfile.ubuntu
src/: base64.cc  base64.h  blockwise.cc  blockwise.h  core_link.cc  core_link.h  endpoint.cc  endpoint.h  error.cc  packet.cc  senml_json.cc  senml_json.h  socket.h  uri.cc  uri.h  utils.cc  utils.h
src/lwip/: lwip_dns_resolver.cc  lwip_dns_resolver.h  lwip_socket.cc  lwip_socket.h
src/unix/: unix_connection.cc  unix_connection.h  unix_dns_resolver.cc  unix_dns_resolver.h  unix_dtls_client.cc  unix_dtls_client.h  unix_endpoint.cc  unix_endpoint.h  unix_safe_queue.h  unix_socket.cc  unix_socket.h  unix_udp_client.cc  unix_udp_client.h  unix_udp_server.cc  unix_udp_server.h
test/: test_base64.cc  test_blockwise.cc  test_common.cc  test_common.h  test_conf.h  test_connection.cc  test_core_link.cc  test_dns_resolver.cc  test_packet.cc  test_senml_json.cc  test_socket.cc  test_uri.cc
utilities/: README.md  udp-client.py
